--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" type="text/css" href="http://localhost:3004/style.css"></script>
+    <link rel="stylesheet" type="text/css" href="http://localhost:3004/1/style.css"></script>
     <title>SunChamps E-Tail</title>
   </head>
   <body>
     <div id="product-overview"></div>
-    <script src="/lib/react.development.js"></script>
-    <script src="/lib/react-dom.development.js"></script>
-    <script src="http://localhost:3004/bundle.js"></script>
+    <script src="/1/lib/react.development.js"></script>
+    <script src="/1/lib/react-dom.development.js"></script>
+    <script src="http://localhost:3004/1/bundle.js"></script>
   </body>
 </html>
