--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="http://localhost:3004/1/style.css"></script>
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:3004/1/style.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:3003/styles.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:3001/1/style.css">
     <title>SunChamps E-Tail</title>
   </head>
   <body>
-    <div id="product-overview"></div>
+    <div id="navigation-bar" class='navigation-bar'></div>
+    <div id="Product-Checkout-Container">
+        <div id="product-overview"></div>
+        <div id="Checkout"></div>
+    </div>
+    <div id="Reviews"></div>
     <script src="/1/lib/react.development.js"></script>
     <script src="/1/lib/react-dom.development.js"></script>
     <script src="http://localhost:3004/1/bundle.js"></script>
+    <script src="http://localhost:3003/app.bundle.js"></script>
+    <script src="http://localhost:3002/1/bundle.js"></script>
+    <script src="http://localhost:3001/1/bundle.js"></script>
   </body>
 </html>
