add css changes for the proxy

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/png" href="https://s3-us-west-1.amazonaws.com/hack-reactor-victor/fec-images/favicon.png">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="stylesheet" type="text/css" href="http://localhost:3004/1/style.css">
     <link rel="stylesheet" type="text/css" href="http://localhost:3003/styles.css">
